--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,8 +5,10 @@
 
   --card-rgb: 180, 185, 188;
   --card-border-rgb: 131, 134, 135;
-  
+
   --light: rgb(217, 242, 251);
+  --primary: rgb(22, 22, 22);
+  --second: rgb(78, 205, 142);
 }
 
 * {
@@ -19,6 +21,21 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+
+*::-webkit-scrollbar {
+  width: 15px;
+}
+
+*::-webkit-scrollbar-track {
+  background: var(--primary);
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--second);
+  border: 3px solid var(--primary);
+  border-radius: 10px;
 }
 
 body {
@@ -44,6 +61,33 @@ a {
 
 a img:hover {
   opacity: 0.4;
+}
+
+.ninety {
+  width: 90%;
+}
+
+.eightyfive {
+  width: 85%;
+}
+
+.eighty {
+  width: 80%;
+}
+
+.seventyfive {
+  width: 75%;
+}
+.seventy {
+  width: 70%;
+}
+
+.sixtyfive {
+  width: 65%;
+}
+
+.sixty {
+  width: 60%;
 }
 
 @tailwind base;
