--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,11 +7,12 @@
 }
 
 .container {
+
   height: 525px;
-  margin-left: 20%;
   margin-top: 60px;
   margin-bottom: 60px;
   margin-right: 17%;
+  margin-left: 20%;
   border-radius: 10px;
   background: rgba(var(--card-rgb), 0.1);
   border: 1px solid rgba(var(--card-border-rgb), 0.15);
@@ -82,7 +83,18 @@
 .projects {
   max-width: 660px;
   margin-left: 8%;
-  margin-right: 8%;
+  margin-right: 5%;
+}
+
+.imgtag {
+  position: absolute;
+  top: 41px;
+  font-size: 12px;
+  border: 1px solid  grey;
+  background-color: grey;
+  width: 70px; 
+  padding: 2px;
+  border-radius: 7px;
 }
 
 .favicon {
