--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,9 +6,8 @@
   --card-rgb: 180, 185, 188;
   --card-border-rgb: 131, 134, 135;
 
-  --light: rgb(217, 242, 251);
-  --primary: rgb(22, 22, 22);
-  --second: rgb(78, 205, 142);
+  --light: rgb(126, 126, 126);
+  --primary: rgb(255, 255, 255);
 }
 
 * {
@@ -19,8 +18,7 @@
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  color: rgb(71, 71, 71);
   scroll-behavior: smooth;
 }
 
@@ -33,18 +31,9 @@ body {
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: var(--second);
+  background-color: var(--light);
   border: 3px solid var(--primary);
   border-radius: 10px;
-}
-
-body {
-  background: url(/auroraborealis.gif) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  color: rgb(237, 236, 236);
 }
 
 a {
@@ -55,6 +44,7 @@ a {
 .pfp {
   margin-top: 10px;
   border-radius: 80px;
+  opacity: .85;
 }
 
 /* psuedo class effects */
