--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -119,7 +119,7 @@
 
 .downloadbtn {
   position: absolute;
-  top: 540px;
+  top: 565px;
   left: 49%;
 }
 
@@ -136,6 +136,7 @@
   width: 70px; 
   padding: 2px;
   border-radius: 7px;
+  color:rgb(220, 244, 255)
 }
 
 .favicon {
