--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,7 +8,6 @@
 }
 
 .container {
-
   height: 525px;
   margin-top: 60px;
   margin-bottom: 60px;
@@ -22,16 +21,15 @@
   width: 100%;
   z-index: -2;
   top: 10;
-  left:30px;
-  opacity: .7;
-  
+  left: 30px;
+  opacity: 0.7;
 }
 
 .sidebarContainer {
   position: fixed;
   top: 30vh;
   left: 10px;
-  background-color: rgb(220, 244, 255);  
+  background-color: rgb(220, 244, 255);
   box-shadow: 0px 1px 10px rgb(166, 166, 166);
 
   padding: 2px;
@@ -60,7 +58,6 @@
   width: 100%;
   margin-bottom: 100px;
 }
-
 
 .description {
   display: inherit;
@@ -124,6 +121,12 @@
   left: 49%;
 }
 
+.dwnldtxt {
+  font-size: 9px;
+  position: relative;
+  top: -30px;
+}
+
 .projects {
   max-width: 660px;
 }
@@ -132,12 +135,12 @@
   position: absolute;
   top: 41px;
   font-size: 12px;
-  border: 1px solid  grey;
+  border: 1px solid grey;
   background-color: grey;
-  width: 70px; 
+  width: 70px;
   padding: 2px;
   border-radius: 7px;
-  color:rgb(220, 244, 255)
+  color: rgb(220, 244, 255);
 }
 
 .favicon {
@@ -196,7 +199,7 @@
 }
 
 .staricon {
-  color:rgb(93, 93, 93);
+  color: rgb(93, 93, 93);
   margin-left: 2px;
   max-height: 15px;
   display: inline-block;
@@ -204,10 +207,10 @@
 
 .footer {
   background-color: rgb(252, 252, 252);
-  width: 100vw; 
-  position: fixed; 
+  width: 100vw;
+  position: fixed;
   bottom: 0;
-  height: 20px; 
+  height: 20px;
   box-shadow: 0px 1px 10px rgb(166, 166, 166);
   z-index: 2;
 }
