--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -29,8 +29,9 @@
   position: fixed;
   top: 30vh;
   left: 10px;
-  background-color: rgb(220, 244, 255);
+  /* background-color: rgb(220, 244, 255); */
   box-shadow: 0px 1px 10px rgb(166, 166, 166);
+  background-color: rgb(252, 252, 252);
 
   padding: 2px;
   border-radius: 20px;
