--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,7 +18,12 @@
 
 html,
 body {
-  color: rgb(71, 71, 71);
+  color: rgb(62, 62, 62);
+  /* background-color: rgba(230, 241, 236, 0.222); */
+  background-image: url("/woodbg3.jpg");
+  background-attachment: fixed;
+
+  /* background-color: rgba(12, 24, 15, 0.849);  */
   scroll-behavior: smooth;
 }
 
@@ -44,7 +49,7 @@ a {
 .pfp {
   margin-top: 10px;
   border-radius: 90px;
-  opacity: .85;
+  opacity: 0.85;
 }
 
 /* psuedo class effects */
@@ -81,7 +86,7 @@ a img:hover {
 }
 
 .pic {
-  height: 100px
+  height: 100px;
 }
 
 @tailwind base;
