--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -55,6 +55,17 @@
   margin-bottom: 100px;
 }
 
+.iconStyle {
+  color: "rgb(240,240,240, 0.9" !important;
+  margin: "auto" !important;
+}
+
+.icon-tag {
+  font-size: 10;
+  margin-left: 4;
+  color: "white";
+}
+
 .description {
   display: inherit;
   justify-content: inherit;
@@ -159,7 +170,7 @@
 }
 .barfillcolor {
   /* background: rgba(40, 224, 187, 0.245); */
-  background-color: rgba(20, 20, 20, 0.896);
+  background-color: rgba(95, 111, 120, 0.896);
 }
 
 .skilltag {
@@ -197,7 +208,7 @@
 }
 
 .footer {
-  background-color: rgb(239, 239, 239);
+  background-color: rgba(18, 18, 18, 0.951);
   width: 100vw;
   position: fixed;
   bottom: 0;
@@ -209,6 +220,7 @@
   text-align: center;
   font-size: xx-small;
   margin-top: 2px;
+  color: rgb(240, 240, 240, 0.6);
 }
 
 @media screen and (max-width: 893px) {
