--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,6 +41,15 @@ body {
   border-radius: 10px;
 }
 
+.custom-box-shadow {
+  box-shadow: 2px 1px 15px rgba(129, 144, 155, 0.295);
+}
+
+.custom-sidebar-bg-color {
+  background-color: rgba(40, 45, 49, 0.719);
+
+}
+
 a {
   color: inherit;
   text-decoration: none;
